--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-table": "^8.17.3",
     "@types/dompurify": "^3.0.5",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/qrcode": "^1.5.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dompurify": "^3.1.5",
@@ -33,6 +34,7 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
