--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
-    "recharts": "^2.12.7",
+    "recharts": "^2.13.0-alpha.4",
     "sharp": "^0.33.4",
     "socket.io-client": "^4.5.4",
     "tailwind-merge": "^2.3.0",
