--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "socket.io-client": "^4.5.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.6"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.43.1",
