--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-hook-form": "^7.52.0",
     "recharts": "^2.13.0-alpha.4",
     "sharp": "^0.33.4",
+    "slugify": "^1.6.6",
     "socket.io-client": "^4.5.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
