--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-query-devtools": "^5.45.1",
     "@tanstack/react-table": "^8.17.3",
     "@types/dompurify": "^3.0.5",
+    "@types/html-to-text": "^9.0.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/qrcode": "^1.5.5",
     "class-variance-authority": "^0.7.0",
@@ -34,6 +35,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dompurify": "^3.1.5",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
